<resources>
    <string name="app_name">ESD 단어 등록</string>

    <string name="word_dir">분류
    </string>
    <string name="word_mean">의미</string>
    <string name="word_from">어원</string>
    <string name="word">단어</string>

    <string name="category1">대분류</string>
    <string name="category2">소분류</string>

    <string name="find">조회</string>
    <string name="register">등록</string>

    <string-array name="category1">
        <item>asdf</item>
        <item>ghjk</item>
    </string-array>

    <string name="notice">
        데이터 등록 시 참고사항:\n
        1. 데이터를 등록하기 위해서는 모든 칸에 데이터를 입력해야 합니다.\n
        2. 데이터를 조회할 때에는 단어만 입력하셔도 됩니다. 다른 것을 입력하면 조회할 수 없습니다.\n
        3. 등록한 데이터를 수정할 때에는 먼저 등록한 데이터를 조회하여 불러온 다음, 잘못된 부분을 수정하고 다시 등록하시면 됩니다.\n
        4. 맨 마지막 칸에 띄어쓰기를 넣지 마십시오.
    </string>
</resources>
